kustomize-pgsql/pgsql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  namespace: pgsql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pgsql
