kustomize-pgsql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgsql-ingress
  namespace: pgsql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pgsql.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-pgsql
            port:
              number: 5000
